--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: pravins02 # your GitHub user name
+github_username: #pravins02 # your GitHub user name
 gitlab_username: # your GitLab user name
-twitter_username: pravins002 # your Twitter handle
+twitter_username: #pravins002 # your Twitter handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: pravins02 # your LinkedIn user name
 # scholar_userid: CnwEmgoAAAAJ # your Google Scholar ID
