--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -105,7 +105,7 @@
 - title: Teaching Experience
   type: time_table
   contents:
-    - title: Teachin Assistant (TA)
+    - title: Teaching Assistant (TA)
       institution: Department of Physics, William & Mary
       year: Fall '21 - Spring '22
       description:
