--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -192,3 +192,12 @@
     #     - "<a href=\"https://bbochallenge.com/leaderboard/\">1st place on the meta-learning track leaderboard of the Black-Box Optimization Competition@NeurIPS'20</a>"
     #     - "<a href=\"https://bbochallenge.com/altleaderboard/\">3rd place on the main track of the Black-Box Optimization Competition @NeurIPS'20</a>"
 
+- title: Voluteer
+  type: time_table
+  contents:
+    - year: 2014-2021
+      items:
+        - Research Associate at Brainycube Research Organization, Kathmandu, Nepal
+    - year: 2021 - Present
+      items:
+        - Volunteered in different events with BCM, William & Mary
