--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -51,7 +51,7 @@
       # institution: <a href="http://rlss.inria.fr/">Reinforcement Learning Summer SCOOL (RLSS'19)</a>
       # year: July 2019
     - title: Master of Science - Physics
-      institution: "<a href=\"http://physics.unipune.ac.in/index.shtml\">Dept. of Physics</a>,<a href=\"https://www.unipune.ac.in/\">Savitribai Phule Pune University (SPPU)</a>, Pune, India"
+      institution: "<a href=\"http://physics.unipune.ac.in/index.shtml\">Dept. of Physics</a>,<a href=\"http://www.unipune.ac.in/\">Savitribai Phule Pune University (SPPU)</a>, Pune, India"
       year: 2016 - 2019
       description:
         - "Thesis: Study of SnO2 coated Au Nanocrystals with varying core size "
