--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -59,7 +59,7 @@
         - "First Examiner: Prof. Dr. Sandesh R. Jadkar"
         - "Second Examiner: Prof. Dr. Shreekrishna D. Sartale"
     - title: Bachelor of Science - Physics
-      institution: Amrit Science Campus, Tribhuvan University, USA
+      institution: "<a href=\"https://ac.tu.edu.np/\">Amrit Science Campus</a>, <a href=\"https://tu.edu.np/\"> Tribhuvan University</a>, Kathmandu, Nepal"
       year: 2010 - 2013
       description:
         - "Courses: Mechanics, Optics, Thermodynamics, Classical Mechanics, Statistical Mechanics, Quantum Mechanics, Mathematical Methods of Physics, Linear Algebra"
