honors and awards update

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -189,7 +189,7 @@
         - Graduate Research Fellowship, Awarded by Department of Applied Science, William & Mary
     - year: 2024
       items:
-        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a>. 
+        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
   #     - "<a href=\"https://bbochallenge.com/altleaderboard/\">3rd place on the main track of the Black-Box Optimization Competition @NeurIPS'20</a>"
 
 - title: Voluteer
