--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -200,4 +200,4 @@
         - Research Associate at Brainycube Research Organization, Kathmandu, Nepal
     - year: 2021 - Present
       items:
-        - Volunteered in different events with BCM, William & Mary
+        - Volunteered in different events with BCM, William & Mary, USA
