--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,9 +1,9 @@
-"Hutter":
-  - firstname: ["Frank", "F."]
-    url: https://ml.informatik.uni-freiburg.de/profile/hutter
+"Sharma":
+  - firstname: ["Pravin", "P."]
+    url: https://www.pravinsharma.com.np/
 
-"Lindauer":
-  - firstname: ["Marius", "M."]
+"Mahamuni":
+  - firstname: ["Shailaja", "S."]
     url: https://www.tnt.uni-hannover.de/staff/lindauer/
 
 "Speck":
