--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,10 +1,6 @@
-"Sharma":
-  - firstname: ["Pravin", "P."]
-    url: https://www.pravinsharma.com.np/
-
 "Mahamuni":
   - firstname: ["Shailaja", "S."]
-    url: https://www.tnt.uni-hannover.de/staff/lindauer/
+    url: https://research.unipune.ac.in/User/User/Teacher_JournalList?TeacherId=5D842206-1C4E-4835-A435-22E9B8B0BF8E
 
 "Speck":
   - firstname: ["David", "D."]
