--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -227,6 +227,9 @@
     - title: American Physical Society (APS)
       items:
         - Member since 2021
+    - title: European Magnetism Association (EMA)
+      items:
+        - Student Member since 2024
     - title: Optical Society of America (OSA)
       items:
         - William & Mary, Student Chapter Member since 2022
@@ -235,4 +238,4 @@
         - Member since 2023
     - title: Association of Nepalese Physicists in America (ANPA)
       items:
-        - Member since 2023
+        - Student Member since 2023
