--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -178,6 +178,20 @@
 #       description:
 #         - AAAI, AutoML@ICML
 
+- title: Conferences and Workshops
+  type: time_table
+  contents:
+    - year: 2025
+      items:
+        - Oral Presentation at the 70th Annual Conference on Magnetism and Magnetic Materials, Palm Beach, FL, USA
+    - year: Summer 2022 & 2023
+      items:
+        - Graduate Research Fellowship, Awarded by Department of Applied Science, William & Mary
+    - year: 2024
+      items:
+        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
+  #     - "<a href=\"https://bbochallenge.com/altleaderboard/\">3rd place on the main track of the Black-Box Optimization Competition @NeurIPS'20</a>"
+
 - title: Honors and Awards
   type: time_table
   contents:
