--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -181,61 +181,44 @@
 - title: Conferences and Workshops
   type: time_table
   contents:
-    - title: Oral Presentation
-      year: 2022 - Ongoing
-      institution: "<a href=\"https://sites.google.com/email.wm.edu/opticsandlaserlab/home\">The Optics and Laser Lab</a>,<a href=\"https://wm.edu\">William & Mary, USA</a>"
+    - title: 70th Annual Conference on Magnetism and Magnetic Materials, Palm Beach, FL, USA
+      year: 2025
       description:
-        - "2023 - Now: Continuing working on my PhD project."
-        - "2022: Working on my PhD candidacy research proposal."
-    - title: MS Thesis Project
-      year: AUG 2018 - MAY 2019
-      institution: "Department of Physics, SPPU, India"
-      description:
-        - "Working under the supervision of Prof. Dr. Shailaja Mahamuni for my MS Thesis."
-    - title: Research Associate ( Voluntary Position)
-      institution: The Brainycube Research Organization, Nepal
-      year: 2014 - 2021
-      description: 
-        - "Lead Team Nepal to Asia Pacific Conference for Young Scientists (APCYS-2016), Delhi, India."
-        - "Helped organizing the first Youth Science Summit (YSS-2014) in Kathmandu, Nepal."
-        - "Assisted the whole team in other events happened over time in Nepal."
+        - Oral Presentation
 
-    - title: Financial Head for Annual Fest of the Department, Spandan
-      institution: Department of Physics, SPPU, India
-      year: 2017 - 2018
+    - title: ANPA Global Conference 2024, Fayetteville State University, SC, USA
+      year: 2024
       description:
-        - Assisting in the implementation of budget allocated for the event.
-        - Analysed the spending for the event and provided the report to the committee.
+        - Oral Presentation
 
-- title: Conferences and Workshops
-  type: time_table
-  contents:
-    - year: 2025
-      items:
-        - Oral Presentation at the **70th Annual Conference on Magnetism and Magnetic Materials**, Palm Beach, FL, USA
-    - year: Summer 2022 & 2023
-      items:
-        - Graduate Research Fellowship, Awarded by Department of Applied Science, William & Mary
-    - year: 2024
-      items:
-        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
-  #     - "<a href=\"https://bbochallenge.com/altleaderboard/\">3rd place on the main track of the Black-Box Optimization Competition @NeurIPS'20</a>"
+    - title: Graduate Honors and Research Symposium, William & Mary, USA
+      year: 2024
+      description:
+        - Poster Presentation
+
+    - title: European School on Magnetism, University of York, UK
+      year: 2024
+      description:
+        - Online Participation
+
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 2021
+    - year: 2025
+      items:
+        - Awarded travel funding for participating in <a href='https://2025.magnetism.org/'>70th Annual Conference on Magnetism and Magnetic Materials-2025</a> by <a href=\"https://wm.edu/as/appliedscience\">Dept. of Applied Science</a>,<a href=\"https://cdsp.wm.edu\">School of Computing, Data Sciences & Physics</a> ,<a href=\"https://wm.edu\">William & Mary, USA</a>
+    - year: 2024
+      items:
+        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
       items:
         - Awarded Graduate Assistant Full Scholarship for PhD Studies by William & Mary.
     - year: Summer 2022 & 2023
       items:
         - Graduate Research Fellowship, Awarded by Department of Applied Science, William & Mary
-    - year: 2024
-      items:
-        - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
-  #     - "<a href=\"https://bbochallenge.com/altleaderboard/\">3rd place on the main track of the Black-Box Optimization Competition @NeurIPS'20</a>"
+    
 
-- title: Voluteer
+- title: Volunteer
   type: time_table
   contents:
     - year: 2014-2021
