Refine scholarship and fellowship descriptions
Corrected phrasing for clarity in scholarship and fellowship descriptions.

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -188,10 +188,10 @@
       items:
         - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
       items:
-        - Awarded Graduate Assistant Full Scholarship for PhD Studies by William & Mary.
+        - Awarded a Graduate Assistant Full Scholarship for PhD Studies by William & Mary.
     - year: Summer 2022 & 2023
       items:
-        - Graduate Research Fellowship, Awarded by Department of Applied Science, William & Mary
+        - Graduate Research Fellowship, Awarded by the Department of Applied Science, William & Mary
     
 
 - title: Volunteer
