--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -187,12 +187,12 @@
     - year: 2024
       items:
         - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
-      items:
-        - Awarded a Graduate Assistant Full Scholarship for PhD Studies by William & Mary.
     - year: Summer 2022 & 2023
       items:
         - Graduate Research Fellowship, Awarded by the Department of Applied Science, William & Mary
-    
+    - year: 2021
+      items:
+        - Awarded a Graduate Assistant Full Scholarship for PhD Studies by William & Mary.
 
 - title: Volunteer
   type: time_table
