--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -148,7 +148,7 @@
   contents:
     - year: 2025
       items:
-        - Awarded travel funding for participating in <a href='https://2025.magnetism.org/'>70th Annual Conference on Magnetism and Magnetic Materials-2025</a> by <a href='https://wm.edu/as/appliedscience//'>Department of Applied Science</a>,<a href=\"https://cdsp.wm.edu\">School of Computing, Data Sciences & Physics</a> ,<a href=\"https://wm.edu\">William & Mary, USA</a>
+        - Awarded travel funding for participating in <a href='https://2025.magnetism.org/'>70th Annual Conference on Magnetism and Magnetic Materials-2025</a> by <a href='https://wm.edu/as/appliedscience//'>Department of Applied Science</a>, <a href='https://cdsp.wm.edu//'>School of Computing, Data Sciences & Physics</a> ,<a href=\"https://wm.edu\">William & Mary, USA</a>
     - year: 2024
       items:
         - Awarded Travel Grant to participate in <a href='https://anpaglobal.org/conferences-and-events/conference-2024/'>ANPA Global Conference 2024</a> by <a href='https://anpaglobal.org/'>ANPA</a>. 
