added GRS-2026 news

--- a/_config.yml
+++ b/_config.yml
@@ -188,7 +188,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll/scholar
   - jekyll-sitemap
-  # - jekyll-target-blank
+  - jekyll-target-blank
   - jemoji
 
 # Sitemap settings
